// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`PluggableXirr > getExtendedReferencePoint > should correctly process empty reference point 1`] = `
{
  "buckets": [
    {
      "items": [],
      "localIdentifier": "measures",
    },
    {
      "items": [],
      "localIdentifier": "attribute",
    },
  ],
  "filters": {
    "items": [],
    "localIdentifier": "filters",
  },
  "properties": {},
  "uiConfig": {
    "buckets": {
      "attribute": {
        "accepts": [
          "date",
        ],
        "allowsReordering": false,
        "allowsSwapping": true,
        "canAddItems": true,
        "enabled": true,
        "isShowInPercentEnabled": false,
        "itemsLimit": 1,
        "itemsLimitByType": {
          "date": 1,
        },
        "title": "Date attribute",
      },
      "filters": {
        "accepts": [
          "attribute",
          "date",
        ],
        "allowsReordering": false,
        "enabled": true,
        "isShowInPercentEnabled": false,
        "itemsLimit": 20,
        "itemsLimitByType": {
          "date": 1,
        },
      },
      "measures": {
        "accepts": [
          "metric",
          "fact",
        ],
        "allowsDuplicateItems": true,
        "allowsReordering": true,
        "allowsSwapping": true,
        "canAddItems": true,
        "enabled": true,
        "isShowInPercentEnabled": false,
        "isShowInPercentVisible": false,
        "itemsLimit": 1,
        "title": "Measure",
      },
    },
    "customError": {
      "heading": "Incomplete configuration",
      "text": "Make sure you have selected one measure and one date attribute",
    },
    "exportConfig": {
      "supported": false,
    },
    "openAsReport": {
      "supported": false,
    },
    "recommendations": {},
    "supportedOverTimeComparisonTypes": [],
  },
}
`;

exports[`PluggableXirr > getExtendedReferencePoint > should return proper extended reference point 1`] = `
{
  "buckets": [
    {
      "items": [
        {
          "aggregation": null,
          "attribute": "aazb6kroa3iC",
          "localIdentifier": "m1",
          "showInPercent": null,
          "showOnSecondaryAxis": null,
          "type": "metric",
        },
      ],
      "localIdentifier": "measures",
    },
    {
      "items": [
        {
          "aggregation": null,
          "attribute": "attr.datedataset",
          "dateDatasetRef": {
            "identifier": "ds1",
          },
          "localIdentifier": "a1",
          "showInPercent": null,
          "type": "date",
        },
      ],
      "localIdentifier": "attribute",
    },
  ],
  "filters": {
    "items": [],
    "localIdentifier": "filters",
  },
  "properties": {},
  "uiConfig": {
    "buckets": {
      "attribute": {
        "accepts": [
          "date",
        ],
        "allowsReordering": false,
        "allowsSwapping": true,
        "canAddItems": false,
        "enabled": true,
        "isShowInPercentEnabled": false,
        "itemsLimit": 1,
        "itemsLimitByType": {
          "date": 1,
        },
        "title": "Date attribute",
      },
      "filters": {
        "accepts": [
          "attribute",
          "date",
        ],
        "allowsReordering": false,
        "enabled": true,
        "isShowInPercentEnabled": false,
        "itemsLimit": 20,
        "itemsLimitByType": {
          "date": 1,
        },
      },
      "measures": {
        "accepts": [
          "metric",
          "fact",
        ],
        "allowsDuplicateItems": true,
        "allowsReordering": true,
        "allowsSwapping": true,
        "canAddItems": false,
        "enabled": true,
        "isShowInPercentEnabled": false,
        "isShowInPercentVisible": false,
        "itemsLimit": 1,
        "title": "Measure",
      },
    },
    "customError": undefined,
    "exportConfig": {
      "supported": false,
    },
    "openAsReport": {
      "supported": false,
    },
    "recommendations": {},
    "supportedOverTimeComparisonTypes": [],
  },
}
`;

exports[`PluggableXirr getExtendedReferencePoint should correctly process empty reference point 1`] = `
Object {
  "buckets": Array [
    Object {
      "items": Array [],
      "localIdentifier": "measures",
    },
    Object {
      "items": Array [],
      "localIdentifier": "attribute",
    },
  ],
  "filters": Object {
    "items": Array [],
    "localIdentifier": "filters",
  },
  "properties": Object {},
  "uiConfig": Object {
    "buckets": Object {
      "attribute": Object {
        "accepts": Array [
          "date",
        ],
        "allowsReordering": false,
        "allowsSwapping": true,
        "canAddItems": true,
        "enabled": true,
        "isShowInPercentEnabled": false,
        "itemsLimit": 1,
        "itemsLimitByType": Object {
          "date": 1,
        },
        "title": "Date attribute",
      },
      "filters": Object {
        "accepts": Array [
          "attribute",
          "date",
        ],
        "allowsReordering": false,
        "enabled": true,
        "isShowInPercentEnabled": false,
        "itemsLimit": 20,
        "itemsLimitByType": Object {
          "date": 1,
        },
      },
      "measures": Object {
        "accepts": Array [
          "metric",
          "fact",
        ],
        "allowsDuplicateItems": true,
        "allowsReordering": true,
        "allowsSwapping": true,
        "canAddItems": true,
        "enabled": true,
        "isShowInPercentEnabled": false,
        "isShowInPercentVisible": false,
        "itemsLimit": 1,
        "title": "Measure",
      },
    },
    "customError": Object {
      "heading": "Incomplete configuration",
      "text": "Make sure you have selected one measure and one date attribute",
    },
    "exportConfig": Object {
      "supported": false,
    },
    "openAsReport": Object {
      "supported": false,
    },
    "recommendations": Object {},
    "supportedOverTimeComparisonTypes": Array [],
  },
}
`;

exports[`PluggableXirr getExtendedReferencePoint should return proper extended reference point 1`] = `
Object {
  "buckets": Array [
    Object {
      "items": Array [
        Object {
          "aggregation": null,
          "attribute": "aazb6kroa3iC",
          "localIdentifier": "m1",
          "showInPercent": null,
          "showOnSecondaryAxis": null,
          "type": "metric",
        },
      ],
      "localIdentifier": "measures",
    },
    Object {
      "items": Array [
        Object {
          "aggregation": null,
          "attribute": "attr.datedataset",
          "dateDatasetRef": Object {
            "identifier": "ds1",
          },
          "localIdentifier": "a1",
          "showInPercent": null,
          "type": "date",
        },
      ],
      "localIdentifier": "attribute",
    },
  ],
  "filters": Object {
    "items": Array [],
    "localIdentifier": "filters",
  },
  "properties": Object {},
  "uiConfig": Object {
    "buckets": Object {
      "attribute": Object {
        "accepts": Array [
          "date",
        ],
        "allowsReordering": false,
        "allowsSwapping": true,
        "canAddItems": false,
        "enabled": true,
        "isShowInPercentEnabled": false,
        "itemsLimit": 1,
        "itemsLimitByType": Object {
          "date": 1,
        },
        "title": "Date attribute",
      },
      "filters": Object {
        "accepts": Array [
          "attribute",
          "date",
        ],
        "allowsReordering": false,
        "enabled": true,
        "isShowInPercentEnabled": false,
        "itemsLimit": 20,
        "itemsLimitByType": Object {
          "date": 1,
        },
      },
      "measures": Object {
        "accepts": Array [
          "metric",
          "fact",
        ],
        "allowsDuplicateItems": true,
        "allowsReordering": true,
        "allowsSwapping": true,
        "canAddItems": false,
        "enabled": true,
        "isShowInPercentEnabled": false,
        "isShowInPercentVisible": false,
        "itemsLimit": 1,
        "title": "Measure",
      },
    },
    "customError": undefined,
    "exportConfig": Object {
      "supported": false,
    },
    "openAsReport": Object {
      "supported": false,
    },
    "recommendations": Object {},
    "supportedOverTimeComparisonTypes": Array [],
  },
}
`;
